--- a/css/custom.css
+++ b/css/custom.css
@@ -94,6 +94,37 @@ a:hover {
 	margin: 30px auto;
 }
 
+/* === LATEST OFFERS SECTION ===*/
+
+#latest-offers {
+	text-align: center;
+	color: #fff;
+	background-color: #97689c;
+}
+
+.offer {
+	background: #4a525f;
+	position: relative;
+	min-height: 350px;
+	padding: 40px 10px;
+}
+
+.offer span {
+	background: #8abbb1;
+	display: block;
+	height: 100px;
+	width: 100px;
+	text-align: center;
+	border-radius: 100%;
+	line-height: 100px;
+	position: absolute;
+	margin-left: 50%;
+	left: -50px;
+	top: -50px;
+	font-size: 2em;
+	font-weight: bold;
+}
+
 /* === MOBILE STYLING ===*/
 @media screen and (max-width : 768px) {
 
