Add footer section and copy right section

--- a/css/custom.css
+++ b/css/custom.css
@@ -160,6 +160,9 @@ a:hover {
 	margin-top: 25px;
 }
 
+/* === FOOTER SECTION ===*/
+
+
 /* === MOBILE STYLING ===*/
 @media screen and (max-width : 768px) {
 
