--- a/css/custom.css
+++ b/css/custom.css
@@ -199,6 +199,25 @@ i {
 	margin-top: 30px;
 }
 
+/* === BLOG SECTION ===*/
+.blog-post-title {
+	background: url("../images/divider-purple.png") center no-repeat;
+	height: 80px;
+	background-size: 300px 40px;
+	background-position: center 35px;
+	margin-bottom: 30px;
+}
+
+.blog-post {
+	margin: 30px 0;
+	padding: 20px;
+}
+
+/* === BLOG-SIDEBAR SECTION ===*/
+.sidebar-module {
+	margin: 30px 0;
+	padding: 20px;
+}
 
 /* === MOBILE STYLING ===*/
 @media screen and (max-width : 768px) {
